--- a/src/components/AddTasks.css
+++ b/src/components/AddTasks.css
@@ -3,6 +3,8 @@
     width: 100%;
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 .addtasks-input {
@@ -11,8 +13,12 @@
     border-radius: 5px;
     padding: 0px 10px;
     font-size: 16px;
-    margin-right: 10px;
     background-color: #444;
     color: #eee;    
     flex: 2;
+}
+
+.button-container {
+    flex: 1;
+    margin-left: 10px;  
 }
