--- a/src/components/AddTasks.css
+++ b/src/components/AddTasks.css
@@ -1,8 +1,7 @@
 .addtasks-container {
-    margin: 15px;
+    margin: 30px auto;
     width: 100%;
     display: flex;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
 }
