--- a/src/components/Task.css
+++ b/src/components/Task.css
@@ -13,3 +13,12 @@
 .task-title {
     cursor: pointer;
 }
+
+.remove-task-button {
+    background-color: #444;
+    color: chartreuse;
+    border: none;
+    cursor: pointer;
+    padding: 5px;
+    font-size: 16px;
+}
