Add useEffect and axios for fetching tasks from API

--- a/src/components/Task.css
+++ b/src/components/Task.css
@@ -14,6 +14,13 @@
     cursor: pointer;
 }
 
+.buttons-container {
+    width: 30%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
 .remove-task-button {
     background-color: #444;
     color: chartreuse;
